Sun Jun 23 21:21:13 BST 2013  Peter Schiffer  <pschiffe@redhat.com>
                              Colin Watson  <cjwatson@debian.org>

	Search the full manpath when expanding manual pages that consist
	only of a .so directive (Fedora bug #693458).

	* src/ult_src.c (find_include): New function, handling manpath
	  search where necessary.
	  (ult_src): Call it when a .so directive is found.
	* src/Makefile.am (lexgrog_SOURCES): Add globbing.c and globbing.h.
	* src/tests/man-5: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add man-5.
	* NEWS: Document this.

Sun Jun 23 21:15:45 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/mandb-3: Don't rely on ".so test.1" not working.

Sun Jun 23 14:35:51 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (def_path): Expand wildcards in MANDATORY_MANPATH.

Sun Jun 23 14:29:34 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (guess_manpath): Honour MAN_TEST_DISABLE_PATH
	  environment variable, allowing the test suite to disable PATH
	  handling.  (May change without notice.)
	  (read_config_file): Honour MAN_TEST_DISABLE_SYSTEM_CONFIG
	  environment variable, allowing the test suite to disable reading
	  the system configuration file.  (May change without notice.)
	* src/tests/testlib.sh: Set MAN_TEST_DISABLE_SYSTEM_CONFIG=1.
	* src/tests/man-4: Set MAN_TEST_DISABLE_PATH=1.

Sun Jun 23 12:28:19 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/ult_src.c (test_for_include): Return NULL immediately if
	  buffer is NULL.
	  (ult_src): Use this to remove a level of indentation.

Sun Jun 23 11:14:27 BST 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.13.3.

Fri Jun 14 09:53:47 BST 2013  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Tue Jun 11 12:44:24 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/zh_CN.po: New from Translation Project (thanks, Wylmer
	  Wang).