@@ -1,3 +1,7 @@
+Sun Jun 23 22:44:19 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	Upgrade to Gnulib 20130623.
+
 Sun Jun 23 21:21:13 BST 2013  Peter Schiffer  <pschiffe@redhat.com>
                               Colin Watson  <cjwatson@debian.org>
 
